--- a/css/style.css
+++ b/css/style.css
@@ -46,3 +46,16 @@
 .final {
     padding-top: 150px;
 }
+
+.navbar, navbar-inverse, navbar-fixed-top{
+    background-color: black;
+    border: none;
+}
+
+body {
+    padding-top: 50px;
+}
+
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus {
+    
+}
